--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,12 @@
             <version>3.1</version>
         </dependency>
 
+        <dependency>
+        <groupId>com.rabbitmq</groupId>
+        <artifactId>amqp-client</artifactId>
+        <version>3.6.5</version>
+        </dependency>
+
     </dependencies>
 
     <build>
